# ebpf-on-kube

./: .gitignore  Cargo.toml  Dockerfile  README.md  lima-ubuntu.yml
kubernetes/manifests/: oomkill-bpf.yaml
src/: main.rs
src/bpf/: oomkill.bpf.c
src/simple/: mod.rs  mod_test.rs
