[package]
name = "ebpf-on-kube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.28", features = ["macros", "time", "full"] }
libc = "0.2.144"
plain = "0.2.3"
libbpf-rs = "0.20.1"
procfs = "0.15.1"
prometheus-client = "0.21.1"

[build-dependencies]
libbpf-cargo = "0.20.1"
